# iam-service

./: .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  pyproject.toml
.github/workflows/: push_main.yaml
iam/: app.py
iam/bl/app/command/group/: add_group.py  remove_group.py  update_group.py
iam/bl/app/command/user/: add_user.py  remove_user.py  update_user.py
iam/bl/app/query/group/: get_group.py  list_group.py
iam/bl/app/query/user/: get_user.py  list_user.py
iam/bl/repository/: group_repository_interface.py  user_repository_interface.py
iam/cmd/: create_db.py
iam/controller/v1/: group_controller.py  user_controller.py
iam/db/entity/: group.py  user.py
iam/db/repository/: group_repository_sql.py  user_repository_sql.py
iam/di/: container.py
tests/controller/: conftest.py
tests/controller/v1/: test_user_controller.py
